data-post-hoc questions
- prepare csv
- likert plots
- rmd steps

--- a/survey_analysis.Rmd
+++ b/survey_analysis.Rmd
@@ -25,21 +25,34 @@ This notebook is a supplementary material for Chapter "Perceived Usability Surve
 
 ```{r message=FALSE, warning=FALSE}
 library(dplyr)
+if(!require(likert)){install.packages("likert")}
+library(likert)
+if(!require(svglite)){install.packages("svglite")}
+library(svglite)
+library(ggplot2)
 ```
 
 ### Load Data
 
-The following imported file named ***"data_survey_prepared.csv"*** contains main measurements being the calculated sus-score.
+File: ***"data_survey_prepared.csv"*** - contains calculated sus-score.
 ```{r}
 # read from prepared csv
 df <- read.csv("data-survey-sus_prepared.csv")
 ```
 
-The following is ***participant_profiles_anon_prepared.csv*** contains all anonymized data on participants and their profile (self assessed role: author, user, researcher, other and meta data on activity in field: no of videos, no of papers, no of courses etc.)
+File: ***participant_profiles_anon_prepared.csv*** - contains all anonymized data on participants and their profile (self assessed role: author, user, researcher, other and meta data on activity in field: no of videos, no of papers, no of courses etc.)
 ```{r}
 # read from prepared csv
 profiledata <- read.csv("data-survey-profiles_prepared.csv")
 ```
+
+File: ***data-post-hoc_prepared.csv*** - contains post-hoc questions
+```{r}
+# read from prepared csv
+posthocdata <- read.csv("data-post-hoc_prepared.csv")
+posthocdata <- head(posthocdata,-1)
+```
+
 
 
 ## Descriptive Statistics
@@ -157,6 +170,156 @@ sus_ratiosckv <- sus_diffsckv/sus_avgsckv
 # percentage
 sus_percent_diff_sckv <- abs(sus_ratiosckv*100)
 print(c("SC/KV mean difference in percentage: ", sus_percent_diff_sckv))
+```
+
+### Post-hoc Questions
+
+The following questions were asked after assessing the perceived usability for all three notations.
+
+Preparing for likert plotting
+```{r}
+# get the sums of each column with likert levels
+strong_disagree <- colSums(posthocdata == "1")
+strong_disagree <- as.data.frame(strong_disagree)
+
+disagree <- colSums(posthocdata == "2")
+disagree <- as.data.frame(disagree)
+
+neutral <- colSums(posthocdata == "3")
+neutral <- as.data.frame(neutral)
+
+agree <- colSums(posthocdata == "4")
+agree <- as.data.frame(agree)
+
+strong_agree <- colSums(posthocdata == "5")
+strong_agree <- as.data.frame(strong_agree)
+```
+
+
+#### Claim: Efficiency of a text-based approach
+
+```{r, fig.width=8,fig.height=3}
+# setup 
+col_titles = c("Item","Strong Disagree","Disagree","Neutral","Agree","Strong Agree")
+df_posthoc_q1 = data.frame(matrix(nrow = 0, ncol = length(col_titles))) 
+colnames(df_posthoc_q1) = col_titles
+
+# fill
+df_posthoc_q1[1, ] <- c("claim.efficiency",strong_disagree[5,],disagree[5,],neutral[5,],agree[5,],strong_agree[5,])
+
+# convert to numeric
+i <- c(2:6)  
+df_posthoc_q1[, i] <- apply(df_posthoc_q1[, i], 2, function(x) as.numeric(as.character(x)))
+#sapply(df_posthoc_q1, mode)
+
+# plot
+title <- "Efficiency of a text-based approach"
+subtitle <- "Do you agree with the statement that a text-based approach could be more\nefficient in order to create a video-based learning module?"
+plot(likert(summary = df_posthoc_q1)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+
+#save in variable image to export to svg
+image=plot(likert(summary = df_posthoc_q1)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+#save
+ggsave(file="plots/posthoc_q1_efficiency.svg", plot=image, width=8, height=3)
+```
+
+
+#### Claim: Effectiveness of a text-based approach
+
+```{r, fig.width=8,fig.height=3}
+# setup 
+col_titles = c("Item","Strong Disagree","Disagree","Neutral","Agree","Strong Agree")
+df_posthoc_q2 = data.frame(matrix(nrow = 0, ncol = length(col_titles)))
+colnames(df_posthoc_q2) = col_titles
+
+# fill
+df_posthoc_q2[1, ] <- c("claim.effectiveness",strong_disagree[6,],disagree[6,],neutral[6,],agree[6,],strong_agree[6,])
+
+# convert to numeric
+i <- c(2:6)
+df_posthoc_q2[, i] <- apply(df_posthoc_q2[, i], 2, function(x) as.numeric(as.character(x)))
+#sapply(df_posthoc_q2, mode)
+
+# plot
+title <- "Effectiveness of a text-based approach"
+subtitle <- "Do you agree with the statement that a text-based approach could be more\neffective in order to create a video-based learning module?"
+plot(likert(summary = df_posthoc_q2)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+
+#save in variable image to export to svg
+image=plot(likert(summary = df_posthoc_q2)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+#save
+ggsave(file="plots/posthoc_q2_effectiveness.svg", plot=image, width=8, height=3)
+```
+
+#### Claim: text as first step
+
+```{r, fig.width=8,fig.height=3}
+# setup 
+col_titles = c("Item","Strong Disagree","Disagree","Neutral","Agree","Strong Agree")
+df_posthoc_q3 = data.frame(matrix(nrow = 0, ncol = length(col_titles)))
+colnames(df_posthoc_q3) = col_titles
+
+# fill
+df_posthoc_q3[1, ] <- c("claim.effectiveness",strong_disagree[7,],disagree[7,],neutral[7,],agree[7,],strong_agree[7,])
+
+# convert to numeric
+i <- c(2:6)
+df_posthoc_q3[, i] <- apply(df_posthoc_q3[, i], 2, function(x) as.numeric(as.character(x)))
+#sapply(df_posthoc_q3, mode)
+
+# plot
+title <- "Using a textual notation as a first step"
+subtitle <- "Could you imagine using a textual notation as a starting point\nto sketch out the main structure of a video-based learning module\nin order to continue editing in a graphical user interface (GUI)?"
+plot(likert(summary = df_posthoc_q3)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+
+#save in variable image to export to svg
+image=plot(likert(summary = df_posthoc_q3)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+#save
+ggsave(file="plots/posthoc_q3_text-first-step.svg", plot=image, width=8, height=3)
+```
+
+#### Claim: text with GUI
+
+```{r, fig.width=8,fig.height=3}
+# setup 
+col_titles = c("Item","Strong Disagree","Disagree","Neutral","Agree","Strong Agree")
+df_posthoc_q4 = data.frame(matrix(nrow = 0, ncol = length(col_titles)))
+colnames(df_posthoc_q4) = col_titles
+
+# fill
+df_posthoc_q4[1, ] <- c("claim.effectiveness",strong_disagree[8,],disagree[8,],neutral[8,],agree[8,],strong_agree[8,])
+
+# convert to numeric
+i <- c(2:6)
+df_posthoc_q4[, i] <- apply(df_posthoc_q4[, i], 2, function(x) as.numeric(as.character(x)))
+#sapply(df_posthoc_q4, mode)
+
+# plot
+title <- "Using a textual notation in combination with a graphical user interface
+(GUI)"
+subtitle <- "Could you imagine using a textual notation in combination with an editing environment\nin a graphical user interface (GUI), allowing you to refine and switch\nbetween textual notation and GUI representation?"
+plot(likert(summary = df_posthoc_q4)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+
+#save in variable image to export to svg
+image=plot(likert(summary = df_posthoc_q4)) +
+  labs(title = title, subtitle = subtitle, y = "Percentage", caption = "see Appendix for detailed formulation of question") +
+  theme(axis.text.y = element_blank())
+#save
+ggsave(file="plots/posthoc_q4_text-with-gui.svg", plot=image, width=8, height=3)
 ```
 
 ## Results and Hypothesis Tests
